# bswrapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-release.yml  pypi-release.yml
src/bswrapper/: __init__.py  bswrapper.py
