[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bswrapper"
version = "0.1.0"
authors = [{ name = "BigPattyOG", email = "ptfaint@gmail.com" }]
description = "An easy to use API Wrapper for the Brawl Stars API"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests"]

[project.urls]
Repository = "https://github.com/BigPattyOG/bswrapper"

[tool.setuptools.packages.find]
where = ["."]
